# ATLAS

./: .gitignore  LICENSE  README.md  atlas_vae_demo.ipynb  extract_jellyfish_hull.py  pyproject.toml  requirements.txt
datasets/jellyfish_stickleback/: fish.npz  jellyfish.npz
docs/: model_architecture.md
notebooks/: atlas_demo.ipynb  atlas_training.ipynb  atlas_vae_demo.ipynb  model.ipynb
scripts/: preprocess_data.py
src/atlas/: __init__.py  io.py  metrics.py  model.py  train.py
