[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "0.1.0"
description = "Animal Trajectory Latent Alignment Space — shared behavioral latent space across species"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
]

[tool.setuptools.packages.find]
where = ["src"]
